--- a/Inicial_page.html
+++ b/Inicial_page.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <!--Navbar-->
                 <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
-                    <a class="navbar-brand" href="#">TrampMe</a>
+                    <a class="navbar-brand" href="Inicial_page.html">TrampMe</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                             </button>
@@ -31,10 +31,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Serviços</a>
+                                <a class="nav-link" href="Cadastro-serviço.html">Serviços</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Como funciona</a>
+                                <a class="nav-link" href="Cadastro-serviço.html">Como funciona</a>
                             </li>
                         </ul>
                         <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Acessar</button>
@@ -292,49 +292,6 @@
 
         </div>
         <!-- /.container -->
-
-
-
-
-
-        <!--grid horizontal de 5 itens-->
-
-        <section id="infos" style="padding-top: 40px;">
-            <div class="container">
-                <div class="row">
-                    <!-- <div class="col-md-12 wow bounceIn">
-          <h2 class="text-uppercase">Working Areas</h2>
-        </div> -->
-                    <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-                        <i class="fa fa-search"></i>
-                        <img src="..." class="card-img-top" alt="...">
-                        <p>Busque o profissional ideal para<br> você estabelecendo filtros de <br> busca
-                        </p>
-                    </div>
-                    <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-                        <i class="fa fa-search"></i>
-                        <img src="..." class="card-img-top" alt="...">
-                        <p>Ao clicar em cadastre-se você <br> nos informou seus dados.<br> Criaremos um perfil para você!</p>
-                    </div>
-                    <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-                        <i class="fa fa-search"></i>
-                        <img src="..." class="card-img-top" alt="...">
-                        <p>Ao clicar em cadastre-se você <br> nos informou seus dados.<br> Criaremos um perfil para você!</p>
-                    </div>
-                    <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-                        <i class="fa fa-code"></i>
-                        <img src="..." class="card-img-top" alt="...">
-                        <p>
-                            Configure o perfil para que<br> fique o mais parecido com você! <br> Lembre-se que o modo como<br> você apresenta seu trabalho é<br> essencial para uma boa<br> divulgação. </p>
-                    </div>
-                    <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-                        <i class="fa fa-users"></i>
-                        <img src="..." class="card-img-top" alt="...">
-                        <p>Agora é só aguardar as<br> solicitações de contrato para a<br> prestação de serviços</p>
-                    </div>
-                </div>
-            </div>
-        </section>
     </div>
 </body>
 
