--- a/Cadastro-serviço.html
+++ b/Cadastro-serviço.html
@@ -20,200 +20,209 @@
 
 <body>
     <header id="navigation" class="fixed-top justify-content-end" style="background-color: #011E2E;">
-        <div class="container">
-            <!--Navbar-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
-                <a class="navbar-brand" href="Inicial_page.html">TrampMe</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="container">
+                <!--Navbar-->
+                <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
+                        <a class="navbar-brand" href="#">TrampMe</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="Cadastro-serviço.html">Serviços</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Cadastro-serviço.html">Como funciona</a>
-                        </li>
-                    </ul>
-                    <button class="btn btn-outline-primary my-2 my-sm-0" href="Cadastro-serviço.html" type="submit">Acessar</button>
-                </div>
-            </nav>
-        </div>
+                    
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item">
+                            <a class="nav-link" href="#">Serviços</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" href="#">Como funciona</a>
+                            </li>
+                        </ul>
+                            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Acessar</button>
+                        </div>
+                    </nav>
+            </div>
     </header> <br><br><br>
 
-    <!--Cadastro-->
+<!--Cadastro-->
 
-    <section>
-        <div class="cadastro">
+  <section>
+        <div class= "cadastro">
             <div class="container">
 
-                <h1> Faça parte dessa equipe</h1>
-                <h2>Cadastre seu serviço e aumente a sua divulgação<br> e disponibilidade</h2>
-                <div class="row">
-                    <div class="col-sm-6">
+                    <h1> Faça parte dessa equipe</h1>
+                    <h2>Cadastre seu serviço e aumente a sua divulgação<br> e disponibilidade</h2>
+                    <div class="row">
+                      <div class="col-sm-6">
                         <div class="card">
-                            <div class="card-body">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="exampleInputPassword1">Nome Completo</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite seu nome completo">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Email</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu email">
-                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputPassword1">CPF</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite o número do seu CPF">
-                                    </div>
-                                    <div class="form-group">
-                                        <select class="form-control">
+                          <div class="card-body">
+                              <form>
+                                  <div class="form-group">
+                                  <label for="exampleInputPassword1">Nome Completo</label>
+                                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite seu nome completo">
+                                  </div>
+                                  <div class="form-group">
+                                  <label for="exampleInputEmail1">Email</label>
+                                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu email">
+                                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                  </div>
+                                  <div class="form-group">
+                                  <label for="exampleInputPassword1">CPF</label>
+                                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite o número do seu CPF">
+                                  </div>
+                                  <div class="form-group">
+                                  <select class="form-control">
                                   <option>Categoria</option>
                                   </select>
-                                        <label for="exampleInputPassword1">Senha</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite sua senha">
-                                    </div>
-                                    <div class="form-group form-check">
-                                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                        <label class="form-check-label" for="exampleCheck1">Li e aceito os termos do contrato</label>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">Cadastrar</button>
-                                </form>
-                            </div>
+                                  <label for="exampleInputPassword1">Senha</label>
+                                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite sua senha">
+                                  </div>
+                                  <div class="form-group form-check">
+                                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                  <label class="form-check-label" for="exampleCheck1">Li e aceito os termos do contrato</label>
+                                  </div>
+                                  <button type="submit" class="btn btn-primary">Cadastrar</button>
+                              </form>
+                          </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6">
+                      </div>
+                      <div class="col-sm-6">
                         <img src="images/isometric.png" style="height: 500px; padding-top: 10px">
+                      </div>
                     </div>
+                  </div>
                 </div>
             </div>
         </div>
-        </div>
-        </div>
-    </section>
+  </section>
 
-    <!-- Fim do formulário do cadastro aqui-->
+<!-- Fim do formulário do cadastro aqui-->
 
-    <!--Grid horizontal das 3 textos-->
-    <br>
-    <br>
-    <section id="infos" style="padding-top: 40px;">
-        <div class="container">
-            <table>
-                <div class="row">
-                    <!-- <div class="col-md-12 wow bounceIn">
+<!--Grid horizontal das 3 textos-->
+<br>
+<br>
+<section id="infos" style="padding-top: 40px;">
+    <div class="container">
+      <table>
+        <div class="row">
+            <!-- <div class="col-md-12 wow bounceIn">
       <h2 class="text-uppercase">Working Areas</h2>
     </div> -->
-                    <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-                        <i class="fa fa-search fa-lg white-text mr-md-5 mr-3 fa-4x" style="margin-left: 38%"></i>
-                        <br>
-                        <br>
-                        <p style="text-align: center;margin-right: 0%">Ao clicar em cadastre-se você <br> nos informou seus dados.<br> Criaremos um perfil para você!</p>
-                    </div>
-                    <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-                        <i class="fa fa-code fa-lg white-text mr-md-5 mr-3 fa-4x" style="margin-left: 38%"></i>
-                        <br>
-                        <br>
-                        <p style="text-align: center;margin-right: 0%">
-                            Configure o perfil para que<br> fique o mais parecido com você! Lembre-se que o modo como você apresenta seu trabalho é essencial para uma boa divulgação. </p>
-                    </div>
-                    <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-                        <i class="fa fa-users fa-lg white-text mr-md-5 mr-3 fa-4x" style="margin-left: 38%"></i>
-                        <br>
-                        <br>
-                        <p style="text-align: center;margin-right: 0%">Agora é só aguardar as<br> solicitações de contrato para a<br> prestação de serviços</p>
-                    </div>
-                </div>
-            </table>
+            <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
+                <i class="fa fa-search fa-lg white-text mr-md-5 mr-3 fa-4x" style="margin-left: 38%"></i>
+                <br>
+                <br>
+                <p style="text-align: center;margin-right: 0%">Ao clicar em cadastre-se você <br> 
+                    nos informou seus dados.<br> 
+                    Criaremos um perfil para você!</p>
+            </div>
+            <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
+                <i class="fa fa-code fa-lg white-text mr-md-5 mr-3 fa-4x" style="margin-left: 38%"></i>
+                <br>
+                <br>
+                <p style="text-align: center;margin-right: 0%">
+                    Configure o perfil para que<br>
+                    fique o mais parecido com você!
+                    Lembre-se que o modo como
+                    você apresenta seu trabalho é
+                    essencial para uma boa
+                    divulgação. </p>
+            </div>
+            <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
+                <i class="fa fa-users fa-lg white-text mr-md-5 mr-3 fa-4x" style="margin-left: 38%"></i>
+                <br>
+                <br>
+                <p style="text-align: center;margin-right: 0%">Agora é só aguardar as<br>
+                    solicitações de contrato para a<br>
+                    prestação de serviços</p>
+            </div>
         </div>
-    </section>
+      </table>
+    </div>
+</section>
 
-    <!--Inicio cards de preço do plano-->
+<!--Inicio cards de preço do plano-->
 
-    <!--Botão Finalizar-->
+<!--Botão Finalizar-->
     <br>
     <br>
     <div style="width: 190px; margin: 0 auto;">
-        <button type="button" class="btn btn-warning" style="width: 200px;height: 50px;"> Finalizar</button>
+    <button type="button" class="btn btn-warning" style="width: 200px;height: 50px;"> Finalizar</button>
     </div>
     <br>
+    <br>  
     <br>
-    <br>
-    <br>
-    <!-- Footer-->
-    <footer class="page-footer font-small indigo" style="background-color: #011E2E;">
+    <br> 
+<!-- Footer-->
+<footer class="page-footer font-small indigo" style= "background-color: #011E2E;">
 
-        <div class="container text-center text-md-left">
-            <div class="row">
-                <div class="col-md-3 mx-auto">
-                    <!-- Links -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">TrampMe</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Quem somos?</a>
-                        </li>
-                        <li>
-                            <a href="#!">Fale conosco</a>
-                        </li>
-                        <li>
-                            <a href="#!">Vem pro TrampMe</a>
-                        </li>
-                    </ul>
-                </div>
-                <hr class="clearfix w-100 d-md-none">
-                <div class="col-md-3 mx-auto">
-                    <!-- Links 2-->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Como participar?</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Quais as vantagens do TrampMe?</a>
-                        </li>
-                        <li>
-                            <a href="#!">Coisa 2</a>
-                        </li>
-                        <li>
-                            <a href="#!">Coisa 3</a>
-                        </li>
-                    </ul>
-                </div>
-                <hr class="clearfix w-100 d-md-none">
-                <div class="col-md-3 mx-auto">
-                    <!-- Links dos icons -->
-                    <!-- isso aqui não está funcionando. Os ícones não aparecem-->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Social</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a class="fb-ic" style="color: #ffffff">
-                                <i class="fab fa-facebook-square fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-                            </a>
-                        </li>
-                        <br>
-                        <li>
-                            <a class="ins-ic" style="color: #ffffff">
-                                <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                        </li>
-                        <br>
-                        <li>
-                            <a class="tw-ic" style="color: #ffffff">
-                                <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                        </li>
-                        <!-- Acaba aqui o problema-->
-                    </ul>
-                </div>
-                <hr class="clearfix w-100 d-md-none">
-            </div>
+    <div class="container text-center text-md-left">
+      <div class="row">
+        <div class="col-md-3 mx-auto">
+          <!-- Links -->
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">TrampMe</h5>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Quem somos?</a>
+            </li>
+            <li>
+              <a href="#!">Fale conosco</a>
+            </li>
+            <li>
+              <a href="#!">Vem pro TrampMe</a>
+            </li>
+          </ul>
         </div>
-        <!-- Footer Links -->
-        <div class="footer-copyright text-center py-3" style="color: #ffffff">© 2019 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> TrampMe.com</a>
+        <hr class="clearfix w-100 d-md-none">
+        <div class="col-md-3 mx-auto">
+          <!-- Links 2-->
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Como participar?</h5>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Quais as vantagens do TrampMe?</a>
+            </li>
+            <li>
+              <a href="#!">Coisa 2</a>
+            </li>
+            <li>
+              <a href="#!">Coisa 3</a>
+            </li>
+          </ul>
         </div>
-    </footer>
-    <!-- Footer final-->
+        <hr class="clearfix w-100 d-md-none">
+        <div class="col-md-3 mx-auto">
+          <!-- Links dos icons -->
+          <!-- isso aqui não está funcionando. Os ícones não aparecem-->
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Social</h5>
+          <ul class="list-unstyled">
+            <li>
+                <a class="fb-ic" style="color: #ffffff">
+                    <i class="fab fa-facebook-square fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+                  </a>
+            </li>
+            <br>
+            <li>
+                <a class="ins-ic" style="color: #ffffff">
+                    <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                  </a>
+            </li>
+            <br>
+            <li>
+                <a class="tw-ic" style="color: #ffffff">
+                    <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                </a>
+            </li>
+<!-- Acaba aqui o problema-->
+          </ul>
+        </div>
+        <hr class="clearfix w-100 d-md-none">
+      </div>
+    </div>
+    <!-- Footer Links -->
+    <div class="footer-copyright text-center py-3" style="color: #ffffff">© 2019 Copyright:
+      <a href="https://mdbootstrap.com/education/bootstrap/"> TrampMe.com</a>
+    </div>
+  </footer>
+<!-- Footer final-->
 </body>
 
 </html>
