--- a/Telas/Cadastro-serviço.html
+++ b/Telas/Cadastro-serviço.html
@@ -5,8 +5,8 @@
     <title>TrampMe</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="IServices.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script type="text/javascript" src="../javascript/IServices.js"></script>
     <script src="https://kit.fontawesome.com/10a7600da8.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap-->
@@ -31,17 +31,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="Cadastro-serviço.html">Serviços</a>
+                            <a class="nav-link" href="Inicial_page.html">Contrate um serviço</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Cadastro-serviço.html">Como funciona</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="Cadastro-serviço.html">Registre seu trabalho</a>
                         </li>
                     </ul>
-                    <button class="btn btn-outline-primary my-2 my-sm-0" href="Cadastro-serviço.html" type="submit">Acessar</button>
+                    <button class="btn btn-outline-primary my-2 my-sm-0" href="" type="submit">Acessar</button>
                 </div>
             </nav>
         </div>
-    </header> <br><br><br>
+    </header>
 
     <!--Cadastro-->
 
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <img src="images/isometric.png" style="height: 500px; padding-top: 10px">
+                        <img src="../images/isometric.png" style="height: 500px; padding-top: 10px">
                     </div>
                 </div>
             </div>
