Mudanças nos planos de serviço

--- a/Cadastro-serviço.html
+++ b/Cadastro-serviço.html
@@ -141,17 +141,65 @@
 </section>
 
 <!--Inicio cards de preço do plano-->
-
-<!--Botão Finalizar-->
-    <br>
+<br><br><br>
+<section class="pricing py-5">
+  <h2 style="text-align: center; color:#ffffff">Escolha o plano que cabe no seu bolso!</h2>
+  <br><br>
+  <div class="container">
+    <div class="row">
+      <!-- Free Tier -->
+      <div class="col-lg-6">
+        <div class="card mb-5 mb-lg-0">
+          <div class="card-body">
+            <h5 class="card-title text-muted text-uppercase text-center">Gratis</h5>
+            <h6 class="card-price text-center">R$0<span class="period">/mês</span></h6>
+            <hr>
+            <ul class="fa-ul">
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Cadastre seu trabalho na plataforma</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Seja acessado nas buscas de centenas de peessoas interessadas em contratar seviços </li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Receba avaliações de clientes que te contratarem</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Tenha acesso às API’s de pagamento, rápido, fácil e eficiente para você</li>
+              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Obtenha posições de destaques nas buscas por seu tipo de serviço </li>
+              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Publique ainda mais trabalhos e ganhe melhores avaliações de seus clientes</li>
+            </ul>
+            <a href="#" class="btn btn-block btn-primary text-uppercase" style="background-color:#1282a2">Selecionar</a>
+          </div>
+        </div>
+      </div>
+      <!-- Pro Tier -->
+      <div class="col-lg-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-muted text-uppercase text-center">Pro</h5>
+            <h6 class="card-price text-center">R$29<span class="period">/mês</span></h6>
+            <hr>
+            <ul class="fa-ul">
+              <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Cadastre até 10 trabalhos seus na plataforma</strong></li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Seja acessado nas buscas de centenas de peessoas interessadas em contratar seviços</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Receba avaliações de clientes que te contratarem</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Tenha acesso às API’s de pagamento, rápido, fácil e eficiente para você</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Obtenha posições de destaques nas buscas por seu tipo de serviço</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Adquira maiores recomendações do site</li>
+              <li><span class="fa-li"><i class="fas fa-check"></i></span>Obtenha <strong>maior</strong> divulgação de suas marcas</li>
+            </ul>
+            <a href="#" class="btn btn-block btn-primary text-uppercase" style="background-color:#1282a2">Selecionar</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br><br><br>
+  <!--Botão Finalizar--
+  <br>
     <br>
     <div style="width: 190px; margin: 0 auto;">
-    <button type="button" class="btn btn-warning" style="width: 200px;height: 50px;"> Finalizar</button>
+    <button type="button" class="btn btn-warning" style="width: 200px;height: 50px; opacity: 1;"> Finalizar</button>
     </div>
     <br>
     <br>  
     <br>
     <br> 
+</section>-->
 <!-- Footer-->
 <footer class="page-footer font-small indigo" style= "background-color: #011E2E;">
 
