--- a/Telas/portfolio.html
+++ b/Telas/portfolio.html
@@ -23,7 +23,7 @@
         <div class="container">
             <!--Navbar-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
-                <a class="navbar-brand" href="Inicial_page.html">TrampMe</a>
+                <a class="navbar-brand" href="#">TrampMe</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
@@ -43,86 +43,94 @@
         </div>
     </header>
 
-    <!--Cadastro-->
-
-    <section>
-        <div class="cadastro">
-            <div class="container">
+    <!-- Header -->
+    <header class="bg-primary py-5 mb-5">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-lg-12">
+                    <h1 class="display-4 text-white mt-5 mb-2">Business Name or Tagline</h1>
+                    <p class="lead mb-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non possimus ab labore provident mollitia. Id assumenda voluptate earum corporis facere quibusdam quisquam iste ipsa cumque unde nisi, totam quas ipsam.</p>
+                </div>
             </div>
         </div>
-    </section>
+    </header>
 
-    <!-- Fim do formulário do cadastro aqui-->
+    <!-- Page Content -->
+    <div class="container">
 
-    <!-- Footer-->
-    <footer class="page-footer font-small indigo" style="background-color: #011E2E;">
-
-        <div class="container text-center text-md-left">
-            <div class="row">
-                <div class="col-md-3 mx-auto">
-                    <!-- Links -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">TrampMe</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Quem somos?</a>
-                        </li>
-                        <li>
-                            <a href="#!">Fale conosco</a>
-                        </li>
-                        <li>
-                            <a href="#!">Vem pro TrampMe</a>
-                        </li>
-                    </ul>
-                </div>
-                <hr class="clearfix w-100 d-md-none">
-                <div class="col-md-3 mx-auto">
-                    <!-- Links 2-->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Como participar?</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Quais as vantagens do TrampMe?</a>
-                        </li>
-                        <li>
-                            <a href="#!">Coisa 2</a>
-                        </li>
-                        <li>
-                            <a href="#!">Coisa 3</a>
-                        </li>
-                    </ul>
-                </div>
-                <hr class="clearfix w-100 d-md-none">
-                <div class="col-md-3 mx-auto">
-                    <!-- Links dos icons -->
-                    <!-- isso aqui não está funcionando. Os ícones não aparecem-->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Social</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a class="fb-ic" style="color: #ffffff">
-                                <i class="fab fa-facebook-square fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-                            </a>
-                        </li>
-                        <br>
-                        <li>
-                            <a class="ins-ic" style="color: #ffffff">
-                                <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                        </li>
-                        <br>
-                        <li>
-                            <a class="tw-ic" style="color: #ffffff">
-                                <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                        </li>
-                        <!-- Acaba aqui o problema-->
-                    </ul>
-                </div>
-                <hr class="clearfix w-100 d-md-none">
+        <div class="row">
+            <div class="col-md-8 mb-5">
+                <h2>What We Do</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo, maiores!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.</p>
+                <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
+            </div>
+            <div class="col-md-4 mb-5">
+                <h2>Contact Us</h2>
+                <hr>
+                <address>
+          <strong>Start Bootstrap</strong>
+          <br>3481 Melrose Place
+          <br>Beverly Hills, CA 90210
+          <br>
+        </address>
+                <address>
+          <abbr title="Phone">P:</abbr>
+          (123) 456-7890
+          <br>
+          <abbr title="Email">E:</abbr>
+          <a href="mailto:#">name@example.com</a>
+        </address>
             </div>
         </div>
-        <!-- Footer Links -->
-        <div class="footer-copyright text-center py-3" style="color: #ffffff">© 2019 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> TrampMe.com</a>
+        <!-- /.row -->
+
+        <div class="row">
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+                    <div class="card-body">
+                        <h4 class="card-subtitle">Card title</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <div class="card h-75">
+                    <img class="card-img-top" src="http://placehold.it/300x200" alt="25">
+                    <div class="card-body">
+                        <h4 class="card-subtitle">Card title</h4>
+                        <p class="card-text">Mais informação sobre ela. </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <div class="card h-50">
+                    <div class="card-body">
+                        <h5 class="card-subtitle">Card title</h5>
+                        <p class="card-text">Uma breve descrição do serviço</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                    </div>
+                </div>
+            </div>
         </div>
+        <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
+    <!-- Footer Links -->
+    <div class="footer-copyright text-center py-3" style="color: #ffffff">© 2019 Copyright:
+        <a href="https://mdbootstrap.com/education/bootstrap/"> TrampMe.com</a>
+    </div>
     </footer>
     <!-- Footer final-->
 </body>
