--- a/Telas/Inicial_page.html
+++ b/Telas/Inicial_page.html
@@ -119,7 +119,7 @@
                                         <div class="col-lg-auto col-sm-8 mx-auto">
                                             <div class="row text-center">
                                                 <p>Especializada em reparos de vestidos de baile e confecção de saias rodadas</p>
-                                                <a href="portfolio.html">
+                                                <a href="../portfolio.html">
                                                     <button class="btn btn-outline-success rounded list-inline-item ml-3">Entrar em contato</button>
                                                 </a>
                                             </div>
