--- a/Telas/Inicial_page.html
+++ b/Telas/Inicial_page.html
@@ -36,7 +36,7 @@
                             <a class="nav-link" href="Cadastro-serviço.html">Registre seu trabalho</a>
                         </li>
                     </ul>
-                    <button class="btn btn-outline-primary my-2 my-sm-0" href="" type="submit">Acessar</button>
+                    <button class="btn btn-outline-primary my-2 my-sm-0" href="Login.html" type="submit">Acessar</button>
                 </div>
             </nav>
         </div>
