--- a/Telas/Cadastro-serviço.html
+++ b/Telas/Cadastro-serviço.html
@@ -5,7 +5,7 @@
     <title>TrampMe</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script type="text/javascript" src="IServices.js"></script>
     <script src="https://kit.fontawesome.com/10a7600da8.js" crossorigin="anonymous"></script>
 
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="Cadastro-serviço.html">Registre seu trabalho</a>
                         </li>
                     </ul>
-                    <button class="btn btn-outline-primary my-2 my-sm-0" href="" type="submit">Acessar</button>
+                    <button class="btn btn-outline-primary my-2 my-sm-0" href="Login.html" type="submit">Acessar</button>
                 </div>
             </nav>
         </div>
