--- a/Telas/Cadastro.html
+++ b/Telas/Cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -57,37 +57,64 @@
             <div class="card">
                 <div class="card-body">
                     <form>
-                        <br>
-                        <h2 style="text-align: center">Entre agora!</h2>
-                        <br>
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Email</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" placeholder="Insira o email">
-                            <small id="emailHelp" class="form-text text-muted">Nós não compartilhamos seu email com
-                                ninguém jamais</small>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputEmail4">Email</label>
+                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputPassword4">Password</label>
+                                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputPassword1">Senha</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                            <label for="inputAddress">Address</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
                         </div>
-                        <button type="button" class="btn btn-link">Esqueceu a senha?</button><br>
-                        <button type="button" class="btn btn-link" href="Cadastro.html">Não possui conta ainda?</button>
-                        <button type="submit" class="btn btn-primary" style="margin: 0% 4% 0% 25%; width: 50%;"
-                            href="Inicial_page.html">Entrar</button>
+                        <div class="form-group">
+                            <label for="inputAddress2">Address 2</label>
+                            <input type="text" class="form-control" id="inputAddress2"
+                                placeholder="Apartment, studio, or floor">
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputCity">City</label>
+                                <input type="text" class="form-control" id="inputCity">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="inputState">State</label>
+                                <select id="inputState" class="form-control">
+                                    <option selected>Choose...</option>
+                                    <option>...</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-md-2">
+                                <label for="inputZip">Zip</label>
+                                <input type="text" class="form-control" id="inputZip">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="gridCheck">
+                                <label class="form-check-label" for="gridCheck">
+                                    Check me out
+                                </label>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Sign in</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-
     <footer class="page-footer font-small indigo" style="background-color: #011E2E;">
 
         <div class="container text-center text-md-left">
             <div class="row">
                 <div class="col-md-3 mx-auto">
                     <!-- Links -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">TrampMe</h5>
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">TrampMe
+                    </h5>
                     <ul class="list-unstyled">
                         <li>
                             <a href="#!">Quem somos?</a>
@@ -103,7 +130,8 @@
                 <hr class="clearfix w-100 d-md-none">
                 <div class="col-md-3 mx-auto">
                     <!-- Links 2-->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Como participar?</h5>
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Como
+                        participar?</h5>
                     <ul class="list-unstyled">
                         <li>
                             <a href="#!">Quais as vantagens do TrampMe?</a>
@@ -120,7 +148,8 @@
                 <div class="col-md-3 mx-auto">
                     <!-- Links dos icons -->
                     <!-- isso aqui não está funcionando. Os ícones não aparecem-->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Social</h5>
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Social
+                    </h5>
                     <ul class="list-unstyled">
                         <li>
                             <a class="fb-ic" style="color: #ffffff">
