--- a/Telas/oferta-serviço.html
+++ b/Telas/oferta-serviço.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../css/style.css">
-    <script type="text/javascript" src="../javascript/IServices.js"></script>
+    <script type="text/javascript" src="IServices.js"></script>
     <script src="https://kit.fontawesome.com/10a7600da8.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap-->
@@ -25,7 +24,7 @@
     <title>TrampMe</title>
 </head>
 
-<body class="fundo_login">
+<body>
     <header id="navigation" class="fixed-top justify-content-end" style="background-color: #011E2E;">
         <div class="container">
             <!--Navbar-->
@@ -53,36 +52,18 @@
         </div>
     </header>
     <br><br><br><br>
-    <div class="row" class="fundo_contato" style="margin-left: 30%; margin-bottom: 10%">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <form>
-                        <br>
-                        <h2 style="text-align: center">Entre agora!</h2>
-                        <br>
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Email</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" placeholder="Insira o email">
-                            <small id="emailHelp" class="form-text text-muted">Nós não compartilhamos seu email com
-                                ninguém jamais</small>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Senha</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-                        </div>
-                        <button type="button" class="btn btn-link" onclick="function name()">Esqueceu a senha?</button><br>
-                        <button type="button" class="btn btn-link"><a href="Cadastro.html">Não possui conta
-                                ainda?</a></button>
-                        <button type="submit" class="btn btn-primary" style="margin: 0% 4% 0% 25%; width: 50%;"
-                            href="Inicial_page.html">Entrar</button>
-                    </form>
-                </div>
+    <form>
+            <div class="form-group">
+              <label for="formGroupExampleInput">Example label</label>
+              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
             </div>
-        </div>
-    </div>
-
+            <div class="form-group">
+              <label for="formGroupExampleInput2">Another label</label>
+              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+            </div>
+          </form>
+    <br><br><br><br>
+    <!--Footer-->
     <footer class="page-footer font-small indigo" style="background-color: #011E2E;">
 
         <div class="container text-center text-md-left">
@@ -149,7 +130,8 @@
         </div>
         <!-- Footer Links -->
         <div class="footer-copyright text-center py-3" style="color: #ffffff">© 2019 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> TrampMe.com</a>
+            <a href="https://mdbootstrap.com/education/bootstrap/"> Tramp
+                Me.com</a>
         </div>
     </footer>
 </body>
