--- a/Telas/Inicial.html
+++ b/Telas/Inicial.html
@@ -47,29 +47,36 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Cadastro-serviço.html">Como funciona</a>
                         </li>
+                <li>
+                        <a href="#" class="btn btn-outline-light" style="position: absolute; left: 82%;">Cadastre Seu trabalho</a>
+                </li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
-    <br><br><br>
+    <br><br>
     <div style="width: 100%; height: 450px; background-image: url(../images/fundo-1.png)">
-        <a href="#" class="btn btn-outline-light" style="position: relative; left: 80%;">Cadastre Seu trabalho</a>
         <div class="wrap">
                 <div class="search">
-                   <input type="text" class="searchTerm" placeholder="What are you looking for?">
+                   <input type="text" class="searchTerm" placeholder="O que está procurando?">
                    <button type="submit" class="searchButton">
                      <i class="fa fa-search"></i>
                   </button>
                 </div>
              </div>
+        <div style="color:white; text-align: end;padding-top: 10%; padding-right: 2%">
+            <h2 style="color:white;">Precisando de um serviço?</h2>
+            <p>Encontre o profissional ideal para o serviço que procura.<br> acesso a todas as informações que necessita sobre <br>os profissionais próximos a você.</p>
+        </div>
     </div>
     <table style="margin-left: 7%;">
         <tr>
             <h4 style='text-align: center;'>Categorias em alta</h4>
         </tr>
+        <br>
         <tr>
-            <td style="padding: 0% 5% 0% 5%">
+            <td style="padding: 0% 2% 0% 2%">
             <div class="card" style="width: 14rem;">
                 <img src="../images/ferramentas.jpg" class="card-img-top" alt="..." style='height: 12rem;'>
                 <div class="card-body">
@@ -77,7 +84,7 @@
                 </div>
             </div>
             </td>
-            <td style="padding: 0px 20px 0px 20px">
+            <td style="padding: 0% 2% 0% 2%">
             <div class="card" style="width: 14rem;">
                 <img src="../images/fotografo.jpg" class="card-img-top" alt="..." style='height: 12rem;'>
                 <div class="card-body">
@@ -85,7 +92,7 @@
                 </div>
             </div>
         </td>
-        <td style="padding: 0px 20px 0px 20px">
+        <td style="padding: 0% 2% 0% 2%">
             <div class="card" style="width: 14rem;">
                 <img src="../images/pintor.jpg" class="card-img-top" alt="..." style='height: 12rem;'>
                 <div class="card-body">
@@ -93,7 +100,7 @@
                 </div>
             </div>
         </td>
-        <td style="padding: 0px 20px 0px 20px">
+        <td style="padding: 0% 2% 0% 2%">
             <div class="card" style="width: 14rem;">
                 <img src="../images/kids.jpg" class="card-img-top" alt="..." style='height: 12rem;'>
                 <div class="card-body">
@@ -103,7 +110,7 @@
         </td>
         </tr>
         <tr>
-            <td style="padding: 0px 20px 0px 20px">
+            <td style="padding: 0% 2% 0% 2%">
             <div class="card" style="width: 14rem;">
                 <img src="../images/musica.jpg" class="card-img-top" alt="..." style='height: 12rem;'>
                 <div class="card-body">
@@ -111,7 +118,7 @@
                 </div>
             </div>
             </td>
-            <td style="padding: 0px 20px 0px 20px">
+            <td style="padding: 0% 2% 0% 2%">
             <div class="card"style="width: 14rem;">
                 <img src="../images/costura.jpg" class="card-img-top" alt="..." style='height: 12rem;'>
                 <div class="card-body">
@@ -119,7 +126,7 @@
                 </div>
             </div>
             </td>
-            <td style="padding: 20px 20px 0px 20px">
+            <td style="padding: 0% 2% 0% 2%">
             <div class="card" style="width: 14rem;">
                 <img src="../images/web.jpg" class="card-img-top" alt="..." style='height: 12rem;'>
                 <div class="card-body">
@@ -127,7 +134,7 @@
                 </div>
             </div>
             </td>
-            <td style="padding: 0px 20px 0px 20px">
+            <td style="padding: 0% 2% 0% 2%">
             <div class="card" style="width: 14rem;">
                 <img src="../images/design.jpg" class="card-img-top" style='height: 12rem;'>
                 <div class="card-body">
@@ -137,6 +144,32 @@
             </td>
         </tr>
     </table>
+    <div>
+        <h2 style="text-align: center">Como funciona?</h2>
+        <table>
+            <tr>
+                <td>BUSQUE</td>
+                <td>CATÁLOGO</td>
+                <td>CONTRATO</td>
+                <td>ACEITAR</td>
+                <td>AVALIE</td>
+            </tr>
+            <tr>
+                <td><img src="../images/"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
     <br><br><br><br>
     <footer class="page-footer font-small indigo" style="background-color: #011E2E;">
 
